--- a/app/assets/stylesheets/species/search.scss
+++ b/app/assets/stylesheets/species/search.scss
@@ -1,16 +1,18 @@
 .search-block {
 	background: #8fb7cf;
 	border: 1px solid #6b94af;
-	padding: 18px 18px 17px;
+	padding: 30px 40px 30px;
 	box-shadow: 2px 2px 2px rgba(0,0,0,0.05);
+	&.add {
+	  padding: 30px 60px 30px;
+	}
 
 	.links-area {
 		float: left;
-		width: 125px;
 		line-height: 30px;
 		font-size: 13px;
 		font-weight: bold;
-		padding: 14px 0 14px 10px;
+		padding: 14px 15px 14px 0;
 		text-transform: uppercase;
 		border-right: 1px solid #739cb7;
 
@@ -42,15 +44,14 @@
 
 	.search-form {
 		float: left;
-		width: 531px;
-		padding: 10px 0 13px 17px;
+		width: 493px;
+		padding: 10px 15px 13px 15px;
 		text-transform: uppercase;
 		border-right: 1px solid #739cb7;
 	}
 
 	.search {
 		background: #fff;
-		width: 507px;
 		height: 28px;
 		padding: 3px 4px 5px;
 		position: relative;
@@ -62,7 +63,7 @@
 			padding: 3px;
       padding-left: 10px;
 			float: left;
-			width: 386px;
+			width: 326px;
 			height: 26px;
 			font-size: 13px;
 			line-height: 26px;
@@ -229,18 +230,16 @@
 
 
 
-.inner .search-block .search { width: 429px; }
-.inner .search-block .links-area { width: 126px; }
+.inner .search-block .search { width: 469px; }
 .inner .search-block .search-form {
-	padding: 10px 0 13px 14px;
-	width: 454px;
+	padding: 10px 15px 13px 15px;
 }
-.inner .search-block .search input[type="text"] { width: 313px; }
+.inner .search-block .search input[type="text"] { width: 353px; }
 
-.inner .search-block.add .search-form { width: 612px; }
+.inner .search-block.add .search-form { width: 522px; }
 
-.inner .search-block.add .search { width: 589px; }
-.inner .search-block.add .search input[type="text"] { width: 475px; }
+.inner .search-block.add .search { width: 509px; }
+.inner .search-block.add .search input[type="text"] { width: 395px; }
 
 .total-species {
 	float: left;
@@ -285,5 +284,5 @@
 }
 
 .inner .location-area { padding: 13px 15px 0; }
-.inner .search-block.add .location-area { padding: 15px 0 0 14px; }
+.inner .search-block.add .location-area { padding: 15px 0 0 15px; }
 .search-block .search fieldset.parent-focus.parent-active .popup { display: block; }
